--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "test": "jest",
     "test.watch": "jest --watch"
   },
-  "dependencies": {},
+  "dependencies": {
+    "@stencil/sass": "0.0.5"
+  },
   "devDependencies": {
     "@stencil/core": "^0.10.0",
     "@types/jest": "^21.1.1",
