--- a/package.json
+++ b/package.json
@@ -18,6 +18,10 @@
     "heroku-prebuild": "echo Running empty prebuild command",
     "heroku-postbuild": "npm start"
   },
+  "engines": {
+    "node": "8.9.4",
+    "npm": "5.6.0"
+  },
   "dependencies": {
     "@stencil/sass": "0.0.5"
   },
