--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "scripts": {
     "build": "stencil build",
     "serve": "stencil-dev-server",
-    "start": "npm run build",
+    "start": "npm run build & node index.js",
     "test": "jest",
     "test.watch": "jest --watch",
     "heroku-postbuild": "npm start",
